# src/http/handler/oauth/mod.rs
@@ -10,7 +10,7 @@ use serde::{Deserialize, Serialize};
 use url::Url;
 
 use crate::couchdb::{self, db};
-use crate::error::ApiError;
+use crate::http::error::ApiError;
 use crate::oauth::error::{Error as OAuthError, ErrorKind};
 use crate::oauth::handler::{BasicAuth, OAuthHandler, RequestHandler};
 use crate::oauth::persistence::CouchStorage;
@@ -22,9 +22,8 @@ use crate::templates::oauth::LoginForm;
 use crate::user::UserService;
 
 pub mod error;
-pub mod middleware;
 
-type ConcreteOAuthHandler = OAuthHandler<CouchStorage, CouchStorage, CouchStorage, CouchStorage>;
+pub type ConcreteOAuthHandler = OAuthHandler<CouchStorage, CouchStorage, CouchStorage, CouchStorage>;
 
 pub fn add_oauth_handler(app: &mut ServiceConfig) {
     let couch = &couchdb::SINGLETON;
@@ -104,13 +103,14 @@ pub async fn login(
     let mut url = Url::parse(&redirect_uri)?;
 
     let validate = handler.validate(&auth, client_auth).await;
-    if let Err(err) = validate {
-        return Ok(redirect_to_client(&mut url, err));
-    }
+    let client = match validate {
+        Ok(client) => client,
+        Err(err) => return Ok(redirect_to_client(&mut url, err)),
+    };
 
     let user = match http_session.get::<String>("user_id")? {
         Some(username) => users.find_user(&username).await?,
-        None => users.authenticate_user(form.username, form.password).await.ok(),
+        None => users.authenticate_user(&form.username, &form.password).await.ok(),
     };
 
     let user = match user {
@@ -125,7 +125,7 @@ pub async fn login(
 
     let user_id = user.id();
     http_session.set("user_id", user_id.id())?;
-    let session = &mut Session::empty();
+    let session = &mut Session::for_client(client.client_id().clone());
     session.set_user_id(user_id.to_string());
 
     let handle = handler.handle(&auth, session).await;
@@ -148,9 +148,9 @@ pub async fn token(
     let req = form.into_inner();
     log::debug!("received token request {:?}", &req);
 
-    let session = &mut Session::empty();
-    let validate = handler.validate(&req, client_auth);
-    let res: TokenResponse = validate.and_then(|_| handler.handle(&req, session)).await?;
+    let client = handler.validate(&req, client_auth).await?;
+    let session = &mut Session::for_client(client.client_id().clone());
+    let res: TokenResponse = handler.handle(&req, session).await?;
     Ok(Json(res))
 }
 
