# src/routes.rs
@@ -10,14 +10,17 @@ pub fn routes(cfg: &mut web::ServiceConfig) {
         .service(web::scope("/ui")
             .route("", web::get().to(ui::index)))
         .service(web::scope("/oauth")
-            .configure(oauth::add_oauth_handler)
             .app_data(web::Query::<AuthorizationRequest>::configure(oauth::error::handle_query_errors))
             .app_data(web::Form::<TokenRequest>::configure(oauth::error::handle_form_errors))
             .route("/authorize", web::get().to(oauth::login_form))
             .route("/authorize", web::post().to(oauth::login))
             .route("/token", web::post().to(oauth::token)))
         .service(web::scope("/api")
-            .service(web::scope("/users")
-                .route("/register", web::post().to(user::register))))
+            .service(web::scope("/v1")
+                .service(web::scope("/users")
+                    .route("/me", web::get().to(user::me))
+                    .route("/register", web::post().to(user::register)))))
     ;
 }
+
+
